# AgentX

./: .gitignore  README-DEPLOYMENT.md  README.md  REST_MCP_ADAPTER_DESIGN.md  build-and-push.sh
be/: .env.example  Dockerfile.agentcore  README.md  REST_API_ADAPTER_README.md  chat_records_backup_20251003_164040.json  pyproject.toml
be/app/: main.py
be/app/agent/: agent.py  dynamodb_session_repository.py  event_serializer.py
be/app/config/: config.py  models.py
be/app/mcp/: mcp.py
be/app/middleware/: __init__.py  auth_middleware.py
be/app/models/: __init__.py  rest_api.py
be/app/orchestration/: __init__.py  models.py  service.py
be/app/routers/: agent.py  agentcore_handler.py  chat_record.py  config.py  files.py  mcp.py  orchestration.py  rest_api.py  schedule.py  user.py
be/app/schedule/: models.py  service.py
be/app/services/: __init__.py  rest_api_registry.py  rest_mcp_adapter.py
be/app/user/: auth.py  azure_auth.py  models.py
be/app/utils/: aws_config.py  content_converter.py  s3_storage.py
be/scripts/: README.md  create_rest_api_table.py  export_chat_records.py  generate_api_key.py  import_chat_records.py  migrate_chat_tables.py  rebuild_chat_tables.py
cdk/: .gitignore  README.md  bun.lockb  deploy.sh  package-lock.json  package.json
cdk/lib/: agent-schedule-stack.ts  agentx-stack-combined.ts  agentx-stack.ts
fe/: .env.example  Dockerfile  README.md  RESTAPI_FRONTEND_SUMMARY.md  bun.lockb  docker-entrypoint.sh  index.html  package-lock.json  package.json
fe/src/: main.tsx  vite-env.d.ts
mcp/edu_material_gen2/: .gitignore  Dockerfile  README.md  aurora_db_client.py  batch_process_docs.py  document_chunker.py  example_usage.py  process_word_doc.py  pyproject.toml  schema.sql  test_embedding_generation.py  test_material_generation.py
mcp/edu_material_gen2/edu_material_server/: .env_aws  .env_local_dev  .env_local_docker  README.md  __init__.py  __main__.py  knowledge_base_client.py  material_generator.py  server.py
(+54 files in other folders)
